@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<XMI xmlns:UML="http://schema.omg.org/spec/UML/1.3" verified="false" timestamp="2007-08-23T21:18:18" xmi.version="1.2" >
+<XMI xmlns:UML="http://schema.omg.org/spec/UML/1.3" verified="false" timestamp="2007-08-24T12:44:13" xmi.version="1.2" >
  <XMI.header>
   <XMI.documentation>
    <XMI.exporter>umbrello uml modeller http://uml.sf.net</XMI.exporter>
@@ -41,13 +41,13 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="9856" isRoot="false" isAbstract="false" isQuery="false" name="getStyle" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12349" type="426" />
+        <UML:Parameter kind="return" xmi.id="12502" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="9857" value="" type="19" name="id" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="9945" isRoot="false" isAbstract="false" isQuery="false" name="getStyleMap" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12350" type="9212" />
+        <UML:Parameter kind="return" xmi.id="12503" type="9212" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="9946" value="" type="19" name="id" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -97,7 +97,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="21" isRoot="false" isAbstract="false" isQuery="false" name="getPlaceContainer" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12351" type="22" />
+        <UML:Parameter kind="return" xmi.id="12504" type="22" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="27" isRoot="false" isAbstract="false" isQuery="false" name="loadKml" >
@@ -126,7 +126,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="73" isRoot="false" isAbstract="false" isQuery="false" name="whichPlaceMarkAt" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12352" type="44" />
+        <UML:Parameter kind="return" xmi.id="12505" type="44" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="76" value="" type="74" name="point" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -148,7 +148,7 @@
       <UML:Attribute isSpecification="false" visibility="private" xmi.id="5006" type="5007" name="m_coordinate" />
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6039" isRoot="false" isAbstract="false" isQuery="false" name="attribute" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12353" type="6810" />
+        <UML:Parameter kind="return" xmi.id="12506" type="6810" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6040" value="" type="19" name="key" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -160,7 +160,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6457" isRoot="false" isAbstract="false" isQuery="false" name="metaFields" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12354" type="6486" />
+        <UML:Parameter kind="return" xmi.id="12507" type="6486" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
      </UML:Classifier.feature>
@@ -205,13 +205,13 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="1111" isRoot="false" isAbstract="false" isQuery="false" name="getStyleById" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12355" type="426" />
+        <UML:Parameter kind="return" xmi.id="12508" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="1112" value="" type="2" name="styleId" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="1170" isRoot="false" isAbstract="false" isQuery="false" name="getStyleByRole" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12356" type="426" />
+        <UML:Parameter kind="return" xmi.id="12509" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="1171" value="" type="161" name="role" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -378,7 +378,7 @@
      <UML:Classifier.feature>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6167" isRoot="false" isAbstract="false" isQuery="false" name="getPlaceContainer" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12357" type="44" />
+        <UML:Parameter kind="return" xmi.id="12510" type="44" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6168" value="" type="2" name="imgwidth" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6174" value="" type="2" name="imgheight" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6180" value="" type="2" name="radius" />
@@ -386,7 +386,7 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="6297" isRoot="false" isAbstract="false" isQuery="false" name="getStyle" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12358" type="426" />
+        <UML:Parameter kind="return" xmi.id="12511" type="426" />
         <UML:Parameter isSpecification="false" visibility="private" xmi.id="6304" value="" type="333" name="placemark" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
@@ -425,12 +425,12 @@
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="8442" isRoot="false" isAbstract="true" isQuery="false" name="isShown" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12359" type="5" />
+        <UML:Parameter kind="return" xmi.id="12512" type="5" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
       <UML:Operation isSpecification="false" isLeaf="false" visibility="public" xmi.id="8452" isRoot="false" isAbstract="true" isQuery="false" name="data" >
        <UML:BehavioralFeature.parameter>
-        <UML:Parameter kind="return" xmi.id="12360" type="6810" />
+        <UML:Parameter kind="return" xmi.id="12513" type="6810" />
        </UML:BehavioralFeature.parameter>
       </UML:Operation>
      </UML:Classifier.feature>
@@ -540,7 +540,7 @@
   </UML:Model>
  </XMI.content>
  <XMI.extensions xmi.extender="umbrello" >
-  <docsettings viewid="11021" documentation="" uniqueid="12360" />
+  <docsettings viewid="8897" documentation="" uniqueid="12513" />
   <diagrams>
    <diagram snapgrid="1" showattsig="1" fillcolor="#ffffc0" linewidth="0" zoom="100" showgrid="1" showopsig="1" usefillcolor="1" snapx="10" canvaswidth="958" snapy="10" showatts="1" xmi.id="520" documentation="" type="402" showops="1" showpackage="0" name="KMLClasses" localid="900000" showstereotype="0" showscope="1" snapcsgrid="0" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="#ff0000" canvasheight="1119" >
     <widgets>
@@ -581,14 +581,14 @@
        <startpoint startx="800" starty="510" />
        <endpoint endx="640" endy="367" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="90" usesdiagramusefillcolour="1" x="640" y="370" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10940" showstereotype="1" text="m_latLonAltBox" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="90" usesdiagramusefillcolour="1" x="640" y="370" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12361" showstereotype="1" text="m_latLonAltBox" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="3" indexa="2" visibilityB="200" totalcountb="2" indexb="1" linewidth="none" widgetbid="1650" widgetaid="1575" xmi.id="1907" type="510" changeabilityA="900" changeabilityB="900" linecolor="none" visibilityA="200" >
       <linepath>
        <startpoint startx="860" starty="510" />
        <endpoint endx="860" endy="188" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="44" usesdiagramusefillcolour="1" x="820" y="190" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10941" text="m_lod" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="44" usesdiagramusefillcolour="1" x="820" y="190" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12362" text="m_lod" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" totalcountb="2" indexb="1" linewidth="none" widgetbid="2045" widgetaid="1575" xmi.id="2083" linecolor="none" >
       <linepath>
@@ -625,7 +625,7 @@
        <startpoint startx="524" starty="540" />
        <endpoint endx="740" endy="540" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="46" usesdiagramusefillcolour="1" x="720" y="570" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10942" text="region" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="46" usesdiagramusefillcolour="1" x="720" y="570" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12363" text="region" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" totalcountb="2" indexb="1" linewidth="none" widgetbid="2177" widgetaid="15" xmi.id="7313" linecolor="none" >
       <linepath>
@@ -650,14 +650,14 @@
        <startpoint startx="400" starty="210" />
        <endpoint endx="400" endy="107" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="72" usesdiagramusefillcolour="1" x="400" y="110" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10943" showstereotype="1" text="m_iconstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="72" usesdiagramusefillcolour="1" x="400" y="110" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12364" showstereotype="1" text="m_iconstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" visibilityB="200" totalcountb="2" indexb="1" linewidth="none" widgetbid="441" widgetaid="426" xmi.id="736" type="510" changeabilityA="900" changeabilityB="900" linecolor="none" visibilityA="200" >
       <linepath>
        <startpoint startx="350" starty="250" />
        <endpoint endx="172" endy="250" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="75" usesdiagramusefillcolour="1" x="170" y="250" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10944" showstereotype="1" text="m_labelstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="75" usesdiagramusefillcolour="1" x="170" y="250" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12365" showstereotype="1" text="m_labelstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" totalcountb="2" indexb="1" linewidth="none" widgetbid="2106" widgetaid="14" xmi.id="2244" linecolor="none" >
       <linepath>
@@ -703,7 +703,7 @@
        <startpoint startx="319" starty="60" />
        <endpoint endx="600" endy="60" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="78" usesdiagramusefillcolour="1" x="530" y="120" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10945" showstereotype="1" text="m_placemark" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="78" usesdiagramusefillcolour="1" x="530" y="120" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12366" showstereotype="1" text="m_placemark" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" totalcountb="2" indexb="1" linewidth="none" widgetbid="3978" widgetaid="4741" xmi.id="5157" linecolor="none" >
       <linepath>
@@ -787,8 +787,8 @@
      <classwidget usesdiagramfillcolour="0" width="155" showattsigs="601" usesdiagramusefillcolour="0" x="670" y="240" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="82" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="426" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="0" width="115" showattsigs="601" usesdiagramusefillcolour="0" x="690" y="460" drawascircle="0" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="37" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="2837" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,1,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="1" width="98" showattsigs="601" usesdiagramusefillcolour="1" x="100" y="450" drawascircle="0" showopsigs="601" linewidth="none" fillcolour="none" height="52" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="2045" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,1,0,0,0,0" linecolor="none" />
-     <classwidget usesdiagramfillcolour="1" width="87" showattsigs="601" usesdiagramusefillcolour="1" x="570" y="580" showopsigs="601" linewidth="none" fillcolour="none" height="29" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="9212" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="none" />
-     <classwidget usesdiagramfillcolour="0" width="242" showattsigs="601" usesdiagramusefillcolour="0" x="100" y="570" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="99" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="14" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
+     <classwidget usesdiagramfillcolour="1" width="87" showattsigs="601" usesdiagramusefillcolour="1" x="500" y="540" showopsigs="601" linewidth="none" fillcolour="none" height="29" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="9212" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="none" />
+     <classwidget usesdiagramfillcolour="0" width="242" showattsigs="601" usesdiagramusefillcolour="0" x="100" y="540" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="99" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="14" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="0" width="102" showattsigs="601" usesdiagramusefillcolour="0" x="370" y="250" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="67" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="515" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="0" width="108" showattsigs="601" usesdiagramusefillcolour="0" x="700" y="80" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="37" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="441" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,0,0,0,0,0" linecolor="#ff0000" />
      <classwidget usesdiagramfillcolour="0" width="107" showattsigs="601" usesdiagramusefillcolour="0" x="110" y="70" drawascircle="0" showopsigs="601" linewidth="none" fillcolour="#ffffc0" height="67" usefillcolor="1" showpubliconly="0" showattributes="1" isinstance="0" xmi.id="543" showoperations="1" showpackage="0" showscope="1" font="Tahoma,8,-1,5,75,1,0,0,0,0" linecolor="#ff0000" />
@@ -812,14 +812,14 @@
        <startpoint startx="670" starty="280" />
        <endpoint endx="472" endy="280" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="72" usesdiagramusefillcolour="1" x="470" y="310" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10946" showstereotype="1" text="m_iconstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="72" usesdiagramusefillcolour="1" x="470" y="310" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12367" showstereotype="1" text="m_iconstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" visibilityB="200" totalcountb="2" indexb="1" linewidth="none" widgetbid="441" widgetaid="426" xmi.id="736" type="510" changeabilityA="900" changeabilityB="900" linecolor="none" visibilityA="200" >
       <linepath>
        <startpoint startx="750" starty="240" />
        <endpoint endx="750" endy="117" />
       </linepath>
-      <floatingtext usesdiagramfillcolour="1" width="75" usesdiagramusefillcolour="1" x="530" y="120" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="10947" showstereotype="1" text="m_labelstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
+      <floatingtext usesdiagramfillcolour="1" width="75" usesdiagramusefillcolour="1" x="530" y="120" linewidth="none" posttext="" role="710" fillcolour="none" height="19" usefillcolor="1" pretext="+" isinstance="0" xmi.id="12368" showstereotype="1" text="m_labelstyle" font="Tahoma,8,-1,5,50,0,0,0,0,0" linecolor="none" />
      </assocwidget>
      <assocwidget totalcounta="2" indexa="1" totalcountb="2" indexb="1" linewidth="none" widgetbid="543" widgetaid="441" xmi.id="584" linecolor="none" >
       <linepath>
